regression/fail/tyvar-scope.2.sml
fun f (x: 'a) =
   let
      fun 'a g (y: 'a) = y
   in
      ()
   end
